--- a/app/src/main/res/layout/activity_selecciona_desaparece.xml
+++ b/app/src/main/res/layout/activity_selecciona_desaparece.xml
@@ -7,17 +7,16 @@
     android:orientation="vertical"
     android:weightSum="2">
 
-    <EditText
+    <TextView
         android:id="@+id/editText"
         style="@android:style/Widget.AutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:editable="false"
         android:ems="10"
         android:gravity="center"
         android:inputType="none"
-        android:text="Selecciona donde desaparecera el objeto" />
+        android:text="@string/selecciona_donde_desaparecera_el_objeto" />
 
     <Button
         android:id="@+id/b2550"
