--- a/app/src/main/res/layout/activity_selecciona_figura.xml
+++ b/app/src/main/res/layout/activity_selecciona_figura.xml
@@ -53,7 +53,7 @@
                     android:layout_height="150dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/cuadrado_peque"
+                    android:background="@drawable/cuadrado"
                     android:contentDescription="@string/cuadrado" />
 
                 <ImageButton
