--- a/app/src/main/res/layout/card_configuracion.xml
+++ b/app/src/main/res/layout/card_configuracion.xml
@@ -80,6 +80,13 @@
                 android:textStyle="bold"
                 tools:ignore="NestedWeights" />
 
+            <TextView
+                android:id="@+id/intentos_trial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                tools:text="@string/trial_config" />
+
             <View
                 android:id="@+id/linea_config"
                 android:layout_width="match_parent"
