--- a/app/src/main/res/layout/activity_seleccionar_velocidad.xml
+++ b/app/src/main/res/layout/activity_seleccionar_velocidad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SeleccionarVelocidad">
+    tools:context="luynk.appbeta.SeleccionarVelocidad">
 
     <TextView
         android:id="@+id/textView4"
